# cpp-signer

./: .gitmodules  CMakeLists.txt  README.md  centos7.dockerfile  centos8.dockerfile
example/: CMakeLists.txt  api_withdraw_crypto_endpoints.py  create_order.cpp  create_order.py  ecc_signing.cpp  withdraw.cpp
include/eosio/: abieos_ripemd160.hpp  check.hpp  crypto.hpp  from_bin.hpp  r1_key.hpp  stream.hpp  to_bin.hpp
libraries/: CMakeLists.txt
src/: CMakeLists.txt  crypto.cpp  r1_key.cpp  sha256.cpp
tests/: CMakeLists.txt  sign_test.cpp  verify_test.cpp
